Regimen module has been modified. Activities can be created; regimen can be included.

--- a/src/Bundle/WebBundle/Resources/views/Backend/Regimen/prototypeUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Regimen/prototypeUpdate.html.twig
@@ -38,7 +38,7 @@
                 {{- "accard.regimen_prototype.action.add_activity_prototype"|trans -}}
             </a>
         </div>
-        {% endform %}
+        {% endblock %}
     </div>
     <hr>
 {% endblock %}
