--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
@@ -5,7 +5,8 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
-{% extends 'AccardWebBundle:Frontend:layout.html.twig' %}
+
+{% extends app.request.isXMLHttpRequest() ? 'AccardWebBundle:Frontend:no_layout.html.twig' : 'AccardWebBundle:Frontend:layout.html.twig' %}
 
 {% from 'AccardWebBundle:Common/Macros:actions.html.twig' import create %}
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
@@ -13,30 +14,39 @@
 {% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import no_javascript %}
 {% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
 
-{% set prototype = form.vars.value.prototype is defined ? form.vars.value.prototype.name : 'default' %}
-
+{% set activity = form.vars.value %}
+{% set prototype = activity.prototype is defined ? activity.prototype.name : 'default' %}
 
 {% block content %}
-    {% block page_title %}
+  {# {% block page_title %}
     {{ page_title('accard.activity.action.create'|trans,
         [
             generic(path('accard_frontend_activity_index'), 'accard.activity.action.manage'|trans, 'user')
         ]
     ) }}
     {% endblock %}
+   #}
 
     {% block activity_form %}
         {{ no_javascript() }}
         {{ form_errors(form) }}
 
-        <form action="{{ path('accard_frontend_activity_create', { prototype: prototype }) }}" method="post" {{ form_enctype(form) }}>
+        {% set createPath = path('accard_frontend_activity_create', { prototype: prototype }) %}
+        {% if activity and activity.diagnosis %}
+            {% set createPath = path('accard_frontend_activity_create', { prototype: prototype, diagnosis: activity.diagnosis.id }) %}
+        {% elseif activity and activity.patient %}
+            {% set createPath = path('accard_frontend_activity_create', { prototype: prototype, patient: activity.patient.id }) %}
+        {% endif %}
+
+        <form action="{{ createPath }}" method="post" {{ form_enctype(form) }}>
             {{ form_widget(form._token) }}
             {% include 'AccardWebBundle:Frontend/Activity:form.html.twig' %}
-            <div class="row">
+           {# <div class="row">
                 <div class="col-md-12">
                     <span class="pull-right">{{ create() }}</span>
                 </div>
             </div>
+            #}
         </form>
     {% endblock %}
 {% endblock %}
