--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/activities.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/activities.html.twig
@@ -13,7 +13,7 @@
     {% block regimen_activity_options %}
         <div class="row">
             <div class="col-md-12">
-                <h1>{{ regimen }} Activities</h1>
+                <h1>{{ regimen }} Activity {{regimen.prototype.name}} </h1>
                 <p>Showing activities for patient {{ regimen.patient.fullName }}.</p>
                 {% if regimen.diagnosis %}
                 <p>Showing only activities for diagnosis {{ regimen.diagnosis }}</p>
@@ -26,17 +26,19 @@
             <input type="hidden" name="_method" value="PUT">
             {{ form_widget(form._token) }}
             {% if form.activities.vars.choices|length > 0 %}
-                {{ form_row(form.activities) }}
+                {{ form_row(form.activities)}} 
             {% else %}
                 <div class="alert alert-info">
                     There are no activities available to add to this regimen.
                 </div>
             {% endif %}
+            {% if form.activities.vars.choices|length > 0 %}
             <div class="row">
                 <div class="col-md-12">
                     <span class="pull-right">{{ update() }}</span>
                 </div>
             </div>
+            {% endif %}
         </form>
         {% endblock %}
 {% endblock %}
