--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/create.html.twig
@@ -13,7 +13,8 @@
 {% from 'AccardWebBundle:Common/Macros:alerts.html.twig' import no_javascript %}
 {% from 'AccardWebBundle:Common/Macros:form.html.twig' import select_patient_js, select_patient_css %}
 
-{% set prototype = form.vars.value.prototype is defined ? form.vars.value.prototype.name : 'default' %}
+{% set regimen = form.vars.value %}
+{% set prototype = regimen.prototype is defined ? regimen.prototype.name : 'default' %}
 
 {% block content %}
     {% block page_title %}
@@ -29,7 +30,14 @@
 
         {{ form_errors(form) }}
 
-        <form action="{{ path('accard_frontend_regimen_create', { prototype: prototype }) }}" method="post" {{ form_enctype(form) }}>
+        {% set createPath = path('accard_frontend_regimen_create', { prototype: prototype }) %}
+        {% if regimen and regimen.diagnosis %}
+            {% set createPath = path('accard_frontend_regimen_create', { prototype: prototype, diagnosis: regimen.diagnosis.id }) %}
+        {% elseif regimen and regimen.patient %}
+            {% set createPath = path('accard_frontend_regimen_create', { prototype: prototype, patient: regimen.patient.id }) %}
+        {% endif %}
+
+        <form action="{{ createPath }}" method="post" {{ form_enctype(form) }}>
             {{ form_widget(form._token) }}
             {% include 'AccardWebBundle:Frontend/Regimen:form.html.twig' %}
             <div class="row">
@@ -39,6 +47,7 @@
             </div>
         </form>
     {% endblock %}
+
 {% endblock %}
 
 {% block javascripts %}
