--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/form.html.twig
@@ -94,7 +94,7 @@
                 </ul>
             </div>
             
-            {{ form_row(form.activities) }}
+            {{ form_widget(form.activities) }}
         </div>
     {% endblock %}
 {% endif %}
