Revert "Merge branch 'importer' into develop"
This reverts commit c336a4a94681a9620fa8cb3ace666e4340f652e8, reversing
changes made to 99784e423a60b81c204ee68db345e218167cd1d8.

Conflicts:
	src/Bundle/ResourceBundle/Controller/ResourceController.php
	src/Bundle/WebBundle/Controller/FrontendController.php
	src/Bundle/WebBundle/Resources/config/routing/frontend/main.yml

--- a/src/Bundle/WebBundle/Resources/views/Backend/Template/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Template/design.html.twig
@@ -20,7 +20,9 @@
     }
   </style>
 
-{{ form_start(form) }}
+<form method="post">
+
+    {{ form_widget(form._token) }}
 
     <h3>{{ name }}</h3><hr>
     <pre id="editor"></pre>
@@ -30,7 +32,9 @@
     {{ form_row(form.parent) }}
     {{ form_row(form.location) }}
 
-{{ form_end(form) }}
+    {{ form_widget(form.save) }}
+
+</form>
 
 {% endblock %}
 
@@ -42,7 +46,6 @@
 
 <script>
 	var $textarea = $('#template_content').hide();
-    $textarea.removeAttr("required");
     var editor = ace.edit("editor");
     editor.getSession().setMode('ace/mode/twig');
     editor.getSession().setValue($textarea.val());
