Added bootstrap table row collapse override to fix formatting of cpd sample table

--- a/src/Bundle/WebBundle/Resources/public/css/backend/backend.css
+++ b/src/Bundle/WebBundle/Resources/public/css/backend/backend.css
@@ -425,3 +425,6 @@ body > .alert {
 a.unlinked {
     cursor: not-allowed;
 }
+
+/* Collapse table row override */
+table.table tr.collapse.in { display: table-row; }
