--- a/src/Bundle/WebBundle/Resources/views/Frontend/main.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/main.html.twig
@@ -10,6 +10,9 @@
 
 {% block content %}
 
+{# REMOVE ME!!!! #}
+{{ dump(accard_get_prototypes("activity")) }}
+
     {{ construction('Dashboard') }}
 
 {% endblock %}
