Basic filtering added to outcomes system

--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filter.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filter.html
@@ -1,6 +1,7 @@
-<div id="filter" class="filter col-xs-12 col-sm-6 col-md-4 col-lg-3">
-    <h4 class="filter-name">New Filter</h4>
-    <div class="filter-inner">
-        <p>Filter options?.</p>
+<div class="pull-right">
+    <div class="button-toolbar" role="toolbar" aria-label="Filter options">
+        <button type="button" class="field-filter-configure btn btn-default btn-xs"><i class="fa fa-cog"></i></button>
+        <button type="button" class="field-filter-remove btn btn-default btn-xs"><i class="fa fa-times"></i></button>
     </div>
 </div>
+<%= defaultName %>
