--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/field.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/field.html
@@ -1,1 +1,13 @@
-<li role="presentation"><a href="#" role="tab" data-target="#fields-<%= name %>" data-toggle="pill"><%= name %></a></li>
+<div id="field" class="field col-xs-12 col-sm-6 col-md-4 col-lg-3">
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <span class="pull-right">
+                <button type="button" class="btn btn-xs btn-primary field-filter-add">
+                    <i class="fa fa-plus"></i>
+                </button>
+            </span>
+            <h3 class="panel-title"><%= name %></h3>
+        </div>
+        <ul class="list-group field-filters"></ul>
+    </div>
+</div>
