--- a/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filters.html
+++ b/src/Bundle/OutcomesBundle/Resources/public/js/modules/outcomes/templates/filters.html
@@ -24,8 +24,38 @@
     </div>
     <div class="clearfix"></div>
 </div>
-<div class="row">
-    <div class="col-sm-12">
-        <div id="base-dataset" class="base-dataset">Loading dataset</div>
+
+<!-- Base Dataset Modal -->
+<div id="base-dataset-modal" class="modal fade">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Base Dataset Preview</h4>
+            </div>
+            <div class="modal-body">
+                <div id="base-dataset">Loading dataset.</div>
+            </div>
+        </div>
     </div>
 </div>
+
+<!-- Configuration Modal -->
+<div id="configuration-modal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+                <h4 class="modal-title">Filter Configuration</h4>
+            </div>
+            <div class="modal-body">
+                Configuration body.
+            </div>
+        </div>
+    </div>
+</div>
+
