--- a/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
+++ b/src/Bundle/OutcomesBundle/Resources/views/main.html.twig
@@ -6,7 +6,7 @@
         <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
         <link href="//cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.0/animate.min.css" rel="stylesheet">
-
+        <link href="{{ asset("bundles/accardoutcomes/css/bootstrap-table.css") }}" rel="stylesheet">
         <link href="{{ asset("bundles/accardoutcomes/css/notifier-base.css") }}" rel="stylesheet">
         <link href="{{ asset("bundles/accardoutcomes/css/notifier-theme-plastic.css") }}" rel="stylesheet">
         <link href="{{ asset("bundles/accardoutcomes/css/grid.css") }}" rel="stylesheet">
@@ -121,6 +121,12 @@
             .field .field-filters {
                 min-height: 80px;
                 max-height: 80px;
+                overflow: scroll;
+            }
+
+            #base-dataset {
+                height: 360px;
+                max-height: 360px;
                 overflow: scroll;
             }
         </style>
