Adding prototype detection template inclusion

--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/indexByPrototype.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/indexByPrototype.html.twig
@@ -21,6 +21,8 @@
             designBtn
         ]
     ) }}
+
+    {% include "Theme:Frontend/Activity:#{prototype}-show.html.twig" ignore missing %}
 {% endblock %}
 
 {% block activity_tabs %}
