--- a/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Activity/create.html.twig
@@ -18,14 +18,13 @@
 {% set prototype = activity.prototype is defined ? activity.prototype.name : 'default' %}
 
 {% block content %}
-  {# {% block page_title %}
-    {{ page_title('accard.activity.action.create'|trans,
-        [
-            generic(path('accard_frontend_activity_index'), 'accard.activity.action.manage'|trans, 'user')
-        ]
-    ) }}
+    {% block page_title %}
+        {{ page_title('accard.activity.action.create'|trans,
+            [
+                generic(path('accard_frontend_activity_index'), 'accard.activity.action.manage'|trans, 'user')
+            ]
+        ) }}
     {% endblock %}
-   #}
 
     {% block activity_form %}
         {{ no_javascript() }}
@@ -40,13 +39,14 @@
 
         <form action="{{ createPath }}" method="post" {{ form_enctype(form) }}>
             {{ form_widget(form._token) }}
-            {% include 'AccardWebBundle:Frontend/Activity:form.html.twig' %}
-           {# <div class="row">
+
+            {% include ["Theme:Frontend/Activity:#{prototype}-form.html.twig", "AccardWebBundle:Frontend/Activity:form.html.twig"] %}
+
+            <div class="row">
                 <div class="col-md-12">
                     <span class="pull-right">{{ create() }}</span>
                 </div>
             </div>
-            #}
         </form>
     {% endblock %}
 {% endblock %}
@@ -57,36 +57,41 @@
 {% endblock %}
 
 {% block page_javascripts %}
-<script type="text/javascript">
-    $('#accard_activity_patient').on('change', function(event) {
-        var field = $('#accard_activity_diagnosis');
-        field.find('option').remove();
+    <script type="text/javascript">
+        $('#accard_activity_patient').on('change', function(event) {
+            var field = $('#accard_activity_diagnosis');
+            field.find('option').remove();
 
-        if (!event.added.id) {            
-            return;
-        }
+            if (!event.added.id) {
+                return;
+            }
 
-        var urlClass = window.Accard.get('url');
-        var url = new urlClass('{{ path('accard_api_patient_diagnoses', { patient: 99999 }) }}')
-            .popSegment()
-            .popSegment()
-            .appendSegment(event.added.id)
-            .appendSegment('diagnoses')
-            .toString();
+            var urlClass = window.Accard.get('url');
+            var url = new urlClass('{{ path('accard_api_patient_diagnoses', { patient: 99999 }) }}')
+                .popSegment()
+                .popSegment()
+                .appendSegment(event.added.id)
+                .appendSegment('diagnoses')
+                .toString();
 
-        field.prop('readonly', true);
+            field.prop('readonly', true);
 
-        $.getJSON(url, function(diagnoses) {
-            $(diagnoses).each(function(index, diagnosis) {
-                field.append($('<option value="'+diagnosis.id+'">'+diagnosis.canonical+'</option>'));
+            $.getJSON(url, function(diagnoses) {
+                $(diagnoses).each(function(index, diagnosis) {
+                    field.append($('<option value="'+diagnosis.id+'">'+diagnosis.canonical+'</option>'));
+                })
+                field.prop('readonly', false);
             })
-            field.prop('readonly', false);
-        })
-    });
-</script>
+        });
+    </script>
+
+    {% include "Theme:Frontend/Activity:#{prototype}-javascript.js.twig" ignore missing %}
+
 {% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
     {{ select_patient_css() }}
+
+    {% include "Theme:Frontend/Activity:#{prototype}-style.css.twig" ignore missing %}
 {% endblock %}
