--- a/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/create.html.twig
@@ -44,9 +44,13 @@
 {% block javascripts %}
     {{ parent() }}
     {{ select_patient_js('#accard_behavior_patient') }}
+
+    {% include 'Theme:Frontend/Behavior:{#prototype}-javascript.js.twig' ignore missing  %}
 {% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
     {{ select_patient_css() }}
+
+    {% include 'Theme:Frontend/Behavior:{#prototype}-style.css.twig' ignore missing %}
 {% endblock %}
