--- a/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Behavior/update.html.twig
@@ -21,7 +21,7 @@
     <form action="{{ path('accard_frontend_behavior_update', { prototype: prototype, id: behavior.id }) }}" method="post" {{ form_enctype(form) }}>
         <input type="hidden" name="_method" value="PUT">
         {{ form_widget(form._token) }}
-        {% include 'AccardWebBundle:Frontend/Behavior:form.html.twig' %}
+        {% include ['Theme:Fronent/Behavior:{#prototype}-form.html.twig','Theme:Frontend/Behavior:form.html.twig'] %}
         <div class="row">
             <div class="col-md-12">
                 <span class="pull-right">{{ update() }}</span>
