--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/create.html.twig
@@ -39,7 +39,7 @@
 
         <form action="{{ createPath }}" method="post" {{ form_enctype(form) }}>
             {{ form_widget(form._token) }}
-            {% include 'AccardWebBundle:Frontend/Regimen:form.html.twig' %}
+            {% include ['Theme:Frontend/Regimen:{#prototype}-form-html.twig','Theme:Frontend/Regimen:form.html.twig'] %}
             <div class="row">
                 <div class="col-md-12">
                     <span class="pull-right">{{ create() }}</span>
@@ -181,9 +181,15 @@
         });
     }(jQuery, Accard);
 </script>
+
+    {% include 'Theme:Frontend/Regimen:{#prototype}-javascript.js.twig' ignore missing %}
+
 {% endblock %}
 
 {% block stylesheets %}
     {{ parent() }}
     {{ select_patient_css() }}
+
+    {% include 'Theme:Frontend/Regimen:{#prototype}-style.css.twig' ingore missing %}
+
 {% endblock %}
